# mylife

./: .devenv.flake.nix  .directory  .gitignore  .typos.toml  CNAME  Cargo.toml  Dioxus.toml  LICENSE  LICENSE.md  Makefile  README.md  config_reader.py  config_reader.tcl  convert_to_webp.sh  devenv.nix  flake.nix  index.html  life.c  life.tcl  lifetime_view.tcl  main.py  main.tcl  martin.yaml  rust-toolchain.toml  script.js  shell.nix  styles.css  ui_components.py  ui_components.tcl  update_android_resources.sh  views.py  yearly_view.tcl
.github/workflows/: dioxus.yml  pages.yml  rust.yml  typos.yml
assets/: input.css  main.css  manifest.json  modal.css  sw.js  views.css
assets/styles/: home.css  input.css  main.css  modal.css  views.css
assets/styling/: habit_tracker.css  habits_tab_bar.css  home.css  main.css  tab_bar.css  timeline_input.css  timeline_items.css  timeline_modal.css  timeline_view.css  todo_list.css
data/: default.yaml  martin.yaml
html/: index.html  script.js  styles.css
metadata/android/: AndroidManifest.xml  MainActivity.kt  build.gradle.kts
metadata/android/res/values/: colors.xml  strings.xml
metadata/linux/: myquest.desktop
src/: app.rs  build.rs  config.rs  config_manager.rs  lib.rs  main.rs  models.rs  routes.rs  state.rs  state_manager.rs  ui.rs  utils.rs  yaml_manager.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: habit_tab_bar.rs  habit_tracker.rs  life_events_grid.rs  mod.rs  navbar.rs  tab_bar.rs  todo_day_tabs.rs  todo_item.rs  todo_list.rs  window_manager.rs
src/components/timeline/: bottom_panel.rs  central_panel.rs  edit_legend_item.rs  events_view.rs  legend.rs  lifetime_view.rs  mod.rs  top_panel.rs
src/db/: core.rs  habits.rs  mod.rs  todos.rs
src/managers/: habit_manager.rs  mod.rs  timeline_manager.rs  todo_manager.rs
src/models/: habit.rs  life.rs  mod.rs  todo.rs
src/pages/: home_page.rs  mod.rs  routine_page.rs  timeline_page.rs
src/server/: habits.rs  mod.rs  state.rs  todos.rs
src/state/: life_state.rs  mod.rs
src/storage/: config.rs  file_manager.rs  formats.rs  habits.rs  mod.rs  paths.rs  storage_manager.rs  todos.rs  yaml_manager.rs
src/ui/: bottom_panel.rs  central_panel.rs  edit_legend_item.rs  events_view.rs  legend.rs  lifetime_view.rs  mod.rs  settings_window.rs  top_panel.rs  window_manager.rs  yearly_view.rs
src/utils/: color_utils.rs  compression.rs  config_utils.rs  date_utils.rs  image_utils.rs  layout_utils.rs  mod.rs  screenshot.rs  wasm_config.rs  yaml_manager.rs
src/views/: habits.rs  home.rs  life.rs  mod.rs  test.rs  timeline.rs  todos.rs
