[package]
name = "myquest"
version = "0.1.0"
authors = ["WaoziXyz <waotzi@proton.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
directories = "5.0.1"
chrono = { version = "0.4.39", features = ["serde"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
image = { version = "0.25.2", features = ["png", "jpeg"] }
rfd = "0.15.0"
brotli = "7.0.0"
base64 = "0.22.1"
webp = "0.3"
rand = "0.8.5"
rusttype = "0.9.3"
imageproc = "0.25.0"
hex_color = "3.0.0"
qrcode = "0.14.1"
usvg = "0.44.0"
resvg = "0.44.0"
tiny-skia = "0.11.4"
tracing = "0.1.0"
once_cell = "1.20.2"
java-properties = "2.0.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = "3.4.1"
image = { version = "0.25.2", features = ["webp"] }
dioxus-desktop = "0.6.0"
tokio = { version = "1.42.0", features = ["full"] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
futures-channel = "0.3"
web-sys = { version = "0.3", features = [
    "ResizeObserver",
    "ResizeObserverEntry",
    "Clipboard",
    "Window",
    "Navigator",
    "CanvasRenderingContext2d",
    "HtmlImageElement",
    "HtmlCanvasElement",
    "Element",
    "SvgElement",
] }
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
js-sys = "0.3.70"


[target.'cfg(all(target_os = "linux", not(target_arch = "wasm32")))'.dependencies]
wl-clipboard-rs = "0.9.0"


[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
